--- a/src/app/components/weatherdetails.component.html
+++ b/src/app/components/weatherdetails.component.html
@@ -1,1 +1,22 @@
 <p>weatherdetails works!</p>
+
+<mat-card class="example-card">
+    <mat-card-header>
+        <mat-card-title-group>
+            <mat-card-title>{{model.cityName}}</mat-card-title>
+            <mat-card-subtitle>{{model.description}}</mat-card-subtitle>
+            <img mat-card-sm-image src="{{model.imageUrl}}"/>
+        </mat-card-title-group>
+    </mat-card-header>
+    <mat-card-content>
+        <p>{{model.temp}}</p>
+        <br>
+        <p>{{model.humidity}}</p>
+        <br>
+        <p>{{model.pressure}}</p>
+        <br>
+        <p>{{model.windDegree}}</p>
+        <br>
+        <p>{{model.windSpeed}}</p>
+    </mat-card-content>
+</mat-card>
